--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<h3>I am using...</h3>
 				<br><br>
 				<div class="tooltip"><img class="logo" src="logos/html.svg" alt="HTML5"><span class="tooltiptext">HTML5</span></div>
-				<div class="tooltip"><img class="logo" src="logos/css.svg" alt="CSS"><span class="tooltiptext">CSS3</span></div>
+				<div class="tooltip"><img class="logo" src="logos/css.svg" alt="CSS3"><span class="tooltiptext">CSS3</span></div>
 				<div class="tooltip"><img class="logo" src="logos/js.svg" alt="JavaScript"><span class="tooltiptext">JavaScript</span></div>
 				<div class="tooltip"><img class="logo" src="logos/vue.svg" alt="VueJS"><span class="tooltiptext">VueJS</span></div>
 				<div class="tooltip"><img class="logo" src="logos/php.svg" alt="PHP"><span class="tooltiptext">PHP</span></div>
@@ -35,7 +35,7 @@
 			</div>
 		</div>
 		<div class="grid-container">
-			<div class="grid-item" id="find">
+			<div class="grid-item">
 				<h3>Find me at...</h3>
 				<br><br>
 				<div class="tooltip"><a href="https://github.com/bird-ogd" target="_blank"><img class="logo" src="logos/github.svg" alt="Github"></a><span class="tooltiptext">Github</span></div>
@@ -55,7 +55,7 @@
 
 			<div class="grid-container">
 				<div class="grid-item">
-					<p class="para">I can help small businesses and organisations build a strong and coherant online presence, including independent shops, pubs, restaurants, hotels, estate agents, tradespeople, and charities. I am based in South Wales, but would be happy to hear from those from further afield as well.</p></div>
+					<p class="para">I can help small businesses and organisations build a strong and coherent online presence, including independent shops, pubs, restaurants, hotels, estate agents, tradespeople, and charities. I am based in Cardiff, South Wales, but would be happy to hear from those further afield as well.</p></div>
 					<div class="grid-item">
 						<h3>Contact me...</h3>
 						<br>
@@ -106,7 +106,6 @@
 							<a href="https://bird-ogd.github.io/energy_cost/" target="_blank">energy_cost</a><span class="description">Calculate energy bills based on usage</span>
 						</h3>
 					</div>
-
 					<div class="projectitem">
 						<h3>
 							<a href="https://github.com/bird-ogd/bmi_calculator" target="_blank"><img class="smalllogo" src="logos/github.svg" alt="Github"></a>
