--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<div class="tooltip"><a href="https://www.kaggle.com/birdogd" target="_blank"><img class="logo" src="logos/kaggle.png" alt="Kaggle"></a><span class="tooltiptext">Kaggle</span></div>
 				<div class="tooltip"><a href="https://teamtreehouse.com/oliverbird" target="_blank"><img class="logo" src="logos/treehouse.png" alt="Treehouse"></a><span class="tooltiptext">Treehouse</span></div>
 				<div class="tooltip"><a href="https://www.codewars.com/users/bird-ogd" target="_blank"><img class="logo" src="logos/codewars.jpg" alt="Codewars"></a><span class="tooltiptext">Codewars</span></div>
-				<div class="tooltip"><a href="https://dev.to/birdogd" target="_blank"><img class="logo" src="logos/dev.png" alt="The Dev Community"></a><span class="tooltiptext">Dev.to</span></div>
+				<div class="tooltip"><a href="https://dev.to/birdogd" target="_blank"><img class="logo" src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="The Dev Community"></a><span class="tooltiptext">Dev.to</span></div>
 				<div class="tooltip"><a href="https://www.datacamp.com/profile/bird-ogd" target="_blank"><img class="logo" src="logos/datacamp.png" alt="Datacamp"></a><span class="tooltiptext">Datacamp</span></div>
 				<div class="tooltip"><a href="https://uk.linkedin.com/in/olivergbird" target="_blank"><img class="logo" src="logos/linkedin.svg" alt="Linkedin"></a><span class="tooltiptext">Linkedin</span></div>
 				<div class="tooltip"><a href="https://twitter.com/olivergbird" target="_blank"><img class="logo" src="logos/twitter.svg" alt="Twitter"></a><span class="tooltiptext">Twitter</span></div>
